snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1-sources.jar.sha256
0163c9d01e9fdf778d1dccff81d660543e6c1f8692a897941b820eef99d01a66